--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "concurrently": "^9.1.0",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.49",
+        "prettier": "^3.3.3",
         "tailwindcss": "^3.4.15",
         "vite": "^5.4",
         "vue": "^3.5.13"
