--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
         "dev": "vite"
     },
     "devDependencies": {
+        "@headlessui/vue": "^1.7.23",
+        "@heroicons/vue": "^2.2.0",
         "@inertiajs/vue3": "^1.2.0",
         "@tailwindcss/forms": "^0.5.9",
         "@vitejs/plugin-vue": "^5.2.1",
@@ -13,7 +15,7 @@
         "autoprefixer": "^10.4.20",
         "axios": "^1.7.8",
         "concurrently": "^9.1.0",
-        "laravel-vite-plugin": "^1.0",
+        "laravel-vite-plugin": "^1.1",
         "postcss": "^8.4.49",
         "prettier": "^3.4.1",
         "tailwindcss": "^3.4.15",
