--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
         "@vue/server-renderer": "^3.5.13",
         "autoprefixer": "^10.4.20",
         "axios": "^1.7.9",
-        "concurrently": "^9.1.0",
+        "concurrently": "^9.1.1",
         "laravel-vite-plugin": "^1.1",
+        "luxon": "^3.5.0",
         "postcss": "^8.4.49",
         "prettier": "^3.4.2",
         "tailwindcss": "^3.4.17",
